--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       Vasileios P. Kemerlis.  My research interest includes kernel
       security, software hardening, and other security related topics.
     </p>
+    <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
     <img src="static/b.png" alt="The Guy" class="photo"/>
     </section>
     <section>
