fix relative path

--- a/404.html
+++ b/404.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      body {
+	  max-width: 800px;
+	  margin: auto;
+	  padding: 10px;
+      }
+    </style>
+  </head>
   <h1>Page Not Found</h1>
 </html>
