--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section>
     <h3>Biography</h3>
     <p>
-      I'm a final CS PhD candidate at Brown University, advised by
+      I'm a final year CS PhD candidate at Brown University, advised by
       Vasileios P. Kemerlis.  My research interest includes kernel
       security, software hardening, and other security related topics.
     </p>
