remove the profile picture for the time being

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       security, software hardening, and other security related topics.
     </p>
     <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
-    <img src="static/b.png" alt="The Guy" class="photo"/>
+    <!-- <img src="static/b.png" alt="The Guy" class="photo"/> -->
     </section>
     <section>
     <h3>Publications</h3>
