add back profile picture with attribution

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       security, software hardening, and other security related topics.
     </p>
     <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
-    <!-- <img src="static/b.png" alt="The Guy" class="photo"/> -->
+    <img src="static/b.png" alt="The Guy" class="photo"/>
+    <p style="color: #666666"><small>Art by <a href="https://twitter.com/CarBotAnimation">CarBot</a></small></p>
     </section>
     <section>
     <h3>Publications</h3>
