--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <section>
     <h3>Publications</h3>
-    <p><b>Di Jin</b>, Alexander J. Gaidis, and Vasileios P. Kemerlis. <i>BeeBox: Hardening BPF against Transient Execution Attacks.</i> To appear in 33rd USENIX Security Symposium (USENIX Security 24).</p>
+    <p><b>Di Jin</b>, Alexander J. Gaidis, and Vasileios P. Kemerlis. <i>BeeBox: Hardening BPF against Transient Execution Attacks.</i> In 33rd USENIX Security Symposium (USENIX Security 24).</p>
     <p><b>Di Jin</b>, Vaggelis Atlidakis, and Vasileios P. Kemerlis. <i>EPF: Evil Packet Filter.</i> In 2023 USENIX Annual Technical Conference (USENIX ATC 23), pp. 735-751. 2023.</p>
     <p>Neophytos Christou, <b>Di Jin</b>, Vaggelis Atlidakis, Baishakhi Ray, and Vasileios P. Kemerlis. <i>IvySyn: Automated Vulnerability Discovery in Deep Learning Frameworks.</i> In 32nd USENIX Security Symposium (USENIX Security 23), pp. 2383-2400. 2023.</p>
     <p>Yingjie Xue, <b>Di Jin</b>, and Maurice Herlihy. <i>Fault-tolerant and Expressive Cross-Chain Swaps.</i> In Proceedings of the 24th International Conference on Distributed Computing and Networking, pp. 28-37. 2023.</p>
