Reorder stuff and add some templated generation. Not using existing framework because that feels like over-design for my need

--- a/index.html
+++ b/index.html
@@ -17,31 +17,22 @@
     <h1>Di Jin's Personal Page</h1>
     <nav><ul>
       <li>Home</li>
-      <li>Publications &amp Projects</li>
+      <li><a href="publications.html">Publications &amp Projects</a></li>
       <li><a href="random_things.html">Random Things</a></li>
       <li><a href="fragments.html">Fragments of my Life</a></li>
     </ul></nav>
     <hr />
     <section>
-    <h3>Biography</h3>
-    <p>
-      I'm a final year CS PhD candidate at Brown University, advised by
-      Vasileios P. Kemerlis.  My research interest includes kernel
-      security, software hardening, and other security related topics.
-    </p>
-    <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
-    <img src="static/b.png" alt="The Guy" class="photo"/>
-    <p style="color: #666666"><small>Art by <a href="https://twitter.com/CarBotAnimation">CarBot</a></small></p>
+      <h3>Biography</h3>
+      <p>
+        I'm a final year CS PhD candidate at Brown University, advised by
+        Vasileios P. Kemerlis.  My research interest includes kernel
+        security, software hardening, and other security related topics.
+      </p>
+      <img src="static/b.png" alt="The Guy" class="photo"/>
+      <p style="color: #666666"><small>Art by <a href="https://twitter.com/CarBotAnimation">CarBot</a></small></p>
+      <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
     </section>
-    <section>
-    <h3>Publications</h3>
-    <p><b>Di Jin</b>, Alexander J. Gaidis, and Vasileios P. Kemerlis. <i>BeeBox: Hardening BPF against Transient Execution Attacks.</i> In 33rd USENIX Security Symposium (USENIX Security 24).</p>
-    <p><b>Di Jin</b>, Vaggelis Atlidakis, and Vasileios P. Kemerlis. <i>EPF: Evil Packet Filter.</i> In 2023 USENIX Annual Technical Conference (USENIX ATC 23), pp. 735-751. 2023.</p>
-    <p>Neophytos Christou, <b>Di Jin</b>, Vaggelis Atlidakis, Baishakhi Ray, and Vasileios P. Kemerlis. <i>IvySyn: Automated Vulnerability Discovery in Deep Learning Frameworks.</i> In 32nd USENIX Security Symposium (USENIX Security 23), pp. 2383-2400. 2023.</p>
-    <p>Yingjie Xue, <b>Di Jin</b>, and Maurice Herlihy. <i>Fault-tolerant and Expressive Cross-Chain Swaps.</i> In Proceedings of the 24th International Conference on Distributed Computing and Networking, pp. 28-37. 2023.</p>
-    <p>Ioannis Agadakos, Nicholas Demarinis, <b>Di Jin</b>, Kent Williams-King, Jearson Alfajardo, Benjamin Shteinfeld, David Williams-King, Vasileios P. Kemerlis, and Georgios Portokalidis. <i>Large-scale debloating of binary shared libraries.</i> Digital Threats: Research and Practice 1, no. 4 (2020): 1-28.</p>
-    <p>Nicholas DeMarinis, Kent Williams-King, <b>Di Jin</b>, Rodrigo Fonseca, and Vasileios P. Kemerlis. <i>Sysfilter: Automated system call filtering for commodity software.</i> In 23rd International Symposium on Research in Attacks, Intrusions and Defenses (RAID 2020), pp. 459-474. 2020.</p>
-    <p>Ioannis Agadakos, <b>Di Jin</b>, David Williams-King, Vasileios P. Kemerlis, and Georgios Portokalidis. <i>Nibbler: debloating binary shared libraries.</i> In Proceedings of the 35th Annual Computer Security Applications Conference, pp. 70-83. 2019.</p>
-    </section>
+    
   </body>
 </html>
