--- a/random_things.html
+++ b/random_things.html
@@ -4,7 +4,7 @@
     <title>Di Jin's Personal Page</title>
     <style>
       body {
-	  max-width: 800px;
+	  max-width: 60em;
 	  margin: auto;
 	  padding: 10px;
       }
