updated format and automation for fragments

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <title>Di Jin's Personal Page</title>
     <style>
       body {
-	  max-width: 60em;
+	  max-width: 800px;
 	  margin: auto;
 	  padding: 10px;
       }
       .photo {
 	  width: 200px;
+      }
+      code {
+          max-width: 800px;
+          background-color: #eeeeee;
+          overflow: auto;
+      }
+      pre {
+	  padding-top: 5px;
+	  padding-bottom: 5px;
+	  padding: 5px;
+          max-width: 800px;
+          background-color: #eeeeee;
+          overflow: auto;
       }
     </style>
   </head>
@@ -22,21 +35,21 @@
       <li><a href="fragments.html">Fragments of my Life</a></li>
     </ul></nav>
     <hr />
-    <section>
-      <h3>Biography</h3>
-      <img src="static/b.png" alt="The Guy" class="photo"/>
-      <p style="color: #666666"><small>Art by <a href="https://twitter.com/CarBotAnimation">CarBot</a></small></p>
-      <p>
-        My name is Di Jin (金迪). I am a postdoc researcher
-        at <a href="https://atlas.cs.brown.edu/">Atlas Group</a>, Brown
-        University, working with Nikos Vasilakis. My research interests
-        include system security, software hardening, and other security
-        and system related topics. I received my PhD from Brown
-        University, advised by Vasileios P. Kemerlis. I did my undergrad
-        in IIIS (Yao Class), Tsinghua University.
-      </p>
-      <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
-    </section>
-    
+<section>
+  <h3>Biography</h3>
+  <img src="static/b.png" alt="The Guy" class="photo"/>
+  <p style="color: #666666"><small>Art by <a href="https://twitter.com/CarBotAnimation">CarBot</a></small></p>
+  <p>
+    My name is Di Jin (金迪). I am a postdoc researcher
+    at <a href="https://atlas.cs.brown.edu/">Atlas Group</a>, Brown
+    University, working with Nikos Vasilakis. My research interests
+    include system security, software hardening, and other security
+    and system related topics. I received my PhD from Brown
+    University, advised by Vasileios P. Kemerlis. I did my undergrad
+    in IIIS (Yao Class), Tsinghua University.
+  </p>
+  <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
+</section>
+
   </body>
 </html>
