--- a/fragments.html
+++ b/fragments.html
@@ -4,12 +4,25 @@
     <title>Di Jin's Personal Page</title>
     <style>
       body {
-	  max-width: 60em;
+	  max-width: 800px;
 	  margin: auto;
 	  padding: 10px;
       }
       .photo {
 	  width: 200px;
+      }
+      code {
+          max-width: 800px;
+          background-color: #eeeeee;
+          overflow: auto;
+      }
+      pre {
+	  padding-top: 5px;
+	  padding-bottom: 5px;
+	  padding: 5px;
+          max-width: 800px;
+          background-color: #eeeeee;
+          overflow: auto;
       }
     </style>
   </head>
@@ -22,13 +35,13 @@
       <li>Fragments of my Life</li>
     </ul></nav>
     <hr />
-    <p>
-      Here are something that I needed to do but not being immediately
-      online. I've spent hours trying to figured out, hence the name
-      of the section.
-    </p>
-    <p><a href="fragments/guide_mac_qemu.html">Create a Debian VM on MacOS Apple Silicon with Qemu</a></p>
-    <p><a href="fragments/understanding_refcell.html">A Way to Understand RefCell in Rust</a></p>
-    
+<p>
+  Here are something that I needed to do but not being immediately
+  online. I've spent hours trying to figured out, hence the name
+  of the section.
+</p>
+<p><a href="fragments/guide_mac_qemu.html">Create a Debian VM on MacOS Apple Silicon with Qemu</a></p>
+<p><a href="fragments/understanding_refcell.html">A Way to Understand RefCell in Rust</a></p>
+
   </body>
 </html>
