--- a/publications.html
+++ b/publications.html
@@ -4,12 +4,25 @@
     <title>Di Jin's Personal Page</title>
     <style>
       body {
-	  max-width: 60em;
+	  max-width: 800px;
 	  margin: auto;
 	  padding: 10px;
       }
       .photo {
 	  width: 200px;
+      }
+      code {
+          max-width: 800px;
+          background-color: #eeeeee;
+          overflow: auto;
+      }
+      pre {
+	  padding-top: 5px;
+	  padding-bottom: 5px;
+	  padding: 5px;
+          max-width: 800px;
+          background-color: #eeeeee;
+          overflow: auto;
       }
     </style>
   </head>
@@ -22,17 +35,17 @@
       <li><a href="fragments.html">Fragments of my Life</a></li>
     </ul></nav>
     <hr />
-    <section>
-      <h3>Publications</h3>
-      <p><b>Di Jin</b>, Alexander J. Gaidis, and Vasileios P. Kemerlis. <i>BeeBox: Hardening BPF against Transient Execution Attacks.</i> In 33rd USENIX Security Symposium (USENIX Security 24). pp. 2024</p>
-      <p>Neophytos Christou, <b>Di Jin</b>, Vaggelis Atlidakis, Baishakhi Ray, and Vasileios P. Kemerlis. <i>IvySyn: Automated Vulnerability Discovery in Deep Learning Frameworks.</i> In 32nd USENIX Security Symposium (USENIX Security 23), pp. 2383-2400. 2023.</p>
-      <p><b>Di Jin</b>, Vaggelis Atlidakis, and Vasileios P. Kemerlis. <i>EPF: Evil Packet Filter.</i> In 2023 USENIX Annual Technical Conference (USENIX ATC 23), pp. 735-751. 2023.</p>
-      <p>Lan, Yang, <b>Di Jin</b>, Zhun Wang, Wende Tan, Zheyu Ma, and Chao Zhang. <i>Thunderkaller: Profiling and Improving the Performance of Syzkaller.</i> In 2023 38th IEEE/ACM International Conference on Automated Software Engineering (ASE 2023), pp. 1567-1578. IEEE, 2023.</p>
-      <p>Yingjie Xue, <b>Di Jin</b>, and Maurice Herlihy. <i>Fault-tolerant and Expressive Cross-Chain Swaps.</i> In Proceedings of the 24th International Conference on Distributed Computing and Networking, pp. 28-37. 2023.</p>
-      <p>Ioannis Agadakos, Nicholas Demarinis, <b>Di Jin</b>, Kent Williams-King, Jearson Alfajardo, Benjamin Shteinfeld, David Williams-King, Vasileios P. Kemerlis, and Georgios Portokalidis. <i>Large-scale debloating of binary shared libraries.</i> Digital Threats: Research and Practice 1, no. 4 (2020): 1-28.</p>
-      <p>Nicholas DeMarinis, Kent Williams-King, <b>Di Jin</b>, Rodrigo Fonseca, and Vasileios P. Kemerlis. <i>Sysfilter: Automated system call filtering for commodity software.</i> In 23rd International Symposium on Research in Attacks, Intrusions and Defenses (RAID 2020), pp. 459-474. 2020.</p>
-      <p>Ioannis Agadakos, <b>Di Jin</b>, David Williams-King, Vasileios P. Kemerlis, and Georgios Portokalidis. <i>Nibbler: debloating binary shared libraries.</i> In Proceedings of the 35th Annual Computer Security Applications Conference, pp. 70-83. 2019.</p>
-    </section>
-    
+<section>
+  <h3>Publications</h3>
+  <p><b>Di Jin</b>, Alexander J. Gaidis, and Vasileios P. Kemerlis. <i>BeeBox: Hardening BPF against Transient Execution Attacks.</i> In 33rd USENIX Security Symposium (USENIX Security 24). pp. 2024</p>
+  <p>Neophytos Christou, <b>Di Jin</b>, Vaggelis Atlidakis, Baishakhi Ray, and Vasileios P. Kemerlis. <i>IvySyn: Automated Vulnerability Discovery in Deep Learning Frameworks.</i> In 32nd USENIX Security Symposium (USENIX Security 23), pp. 2383-2400. 2023.</p>
+  <p><b>Di Jin</b>, Vaggelis Atlidakis, and Vasileios P. Kemerlis. <i>EPF: Evil Packet Filter.</i> In 2023 USENIX Annual Technical Conference (USENIX ATC 23), pp. 735-751. 2023.</p>
+  <p>Yang Lan, <b>Di Jin</b>, Zhun Wang, Wende Tan, Zheyu Ma, and Chao Zhang. <i>Thunderkaller: Profiling and Improving the Performance of Syzkaller.</i> In 2023 38th IEEE/ACM International Conference on Automated Software Engineering (ASE 2023), pp. 1567-1578. IEEE, 2023.</p>
+  <p>Yingjie Xue, <b>Di Jin</b>, and Maurice Herlihy. <i>Fault-tolerant and Expressive Cross-Chain Swaps.</i> In Proceedings of the 24th International Conference on Distributed Computing and Networking, pp. 28-37. 2023.</p>
+  <p>Ioannis Agadakos, Nicholas Demarinis, <b>Di Jin</b>, Kent Williams-King, Jearson Alfajardo, Benjamin Shteinfeld, David Williams-King, Vasileios P. Kemerlis, and Georgios Portokalidis. <i>Large-scale debloating of binary shared libraries.</i> Digital Threats: Research and Practice 1, no. 4 (2020): 1-28.</p>
+  <p>Nicholas DeMarinis, Kent Williams-King, <b>Di Jin</b>, Rodrigo Fonseca, and Vasileios P. Kemerlis. <i>Sysfilter: Automated system call filtering for commodity software.</i> In 23rd International Symposium on Research in Attacks, Intrusions and Defenses (RAID 2020), pp. 459-474. 2020.</p>
+  <p>Ioannis Agadakos, <b>Di Jin</b>, David Williams-King, Vasileios P. Kemerlis, and Georgios Portokalidis. <i>Nibbler: debloating binary shared libraries.</i> In Proceedings of the 35th Annual Computer Security Applications Conference, pp. 70-83. 2019.</p>
+</section>
+
   </body>
 </html>
