--- a/publications.html
+++ b/publications.html
@@ -29,10 +29,10 @@
   <body>
     <h1>Di Jin's Personal Page</h1>
     <nav><ul>
-      <li><a href="index.html">Home</a></li>
-      <li>Publications &amp Projects</li>
-      <li><a href="random_things.html">Random Things</a></li>
-      <li><a href="fragments.html">Fragments of my Life</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/publications.html">Publications &amp Projects</li>
+      <li><a href="/random_things.html">Random Things</a></li>
+      <li><a href="/fragments.html">Fragments of my Life</a></li>
     </ul></nav>
     <hr />
 <section>
