--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <h1>Di Jin's Personal Page</h1>
     <nav><ul>
-      <li><a href="/index.html">Home</li>
+      <li>Home</li>
       <li><a href="/publications.html">Publications &amp Projects</a></li>
       <li><a href="/random_things.html">Random Things</a></li>
       <li><a href="/fragments.html">Fragments of my Life</a></li>
