--- a/random_things.html
+++ b/random_things.html
@@ -31,7 +31,7 @@
     <nav><ul>
       <li><a href="/index.html">Home</a></li>
       <li><a href="/publications.html">Publications &amp Projects</a></li>
-      <li><a href="/random_things.html">Random Things</li>
+      <li>Random Things</li>
       <li><a href="/fragments.html">Fragments of my Life</a></li>
     </ul></nav>
     <hr />
