--- a/fragments.html
+++ b/fragments.html
@@ -32,7 +32,7 @@
       <li><a href="/index.html">Home</a></li>
       <li><a href="/publications.html">Publications &amp Projects</a></li>
       <li><a href="/random_things.html">Random Things</a></li>
-      <li><a href="/fragments.html">Fragments of my Life</li>
+      <li>Fragments of my Life</li>
     </ul></nav>
     <hr />
 <p>
