--- a/publications.html
+++ b/publications.html
@@ -37,8 +37,8 @@
     <hr />
 <section>
   <h3>Publications</h3>
-  <p><b>Di Jin</b>, Ethan Lavi, Jinghao Jia, Robert Y. Lewis, Nikos Vasilakis. <i>KLean: Extending Operating System Kernels with Lean</i> In 13th Workshop on Programming Languages and Operating Systems (PLOS 2025)</p>
-  <p>Yizheng Xie, <b>Di Jin</b>, Nikos Vasilakis. <i>Towards Hybrid Cooperative-Preemptive Scheduling</i> In 13th Workshop on Programming Languages and Operating Systems (PLOS 2025)</p>
+  <p><b>Di Jin</b>, Ethan Lavi, Jinghao Jia, Robert Y. Lewis, Nikos Vasilakis. <i>KLean: Extending Operating System Kernels with Lean.</i> In 13th Workshop on Programming Languages and Operating Systems (PLOS 2025)</p>
+  <p>Yizheng Xie, <b>Di Jin</b>, Nikos Vasilakis. <i>Towards Hybrid Cooperative-Preemptive Scheduling.</i> In 13th Workshop on Programming Languages and Operating Systems (PLOS 2025)</p>
   <p><b>Di Jin</b>, Alexander J. Gaidis, and Vasileios P. Kemerlis. <i>BeeBox: Hardening BPF against Transient Execution Attacks.</i> In 33rd USENIX Security Symposium (USENIX Security 24). pp. 2024</p>
   <p>Neophytos Christou, <b>Di Jin</b>, Vaggelis Atlidakis, Baishakhi Ray, and Vasileios P. Kemerlis. <i>IvySyn: Automated Vulnerability Discovery in Deep Learning Frameworks.</i> In 32nd USENIX Security Symposium (USENIX Security 23), pp. 2383-2400. 2023.</p>
   <p><b>Di Jin</b>, Vaggelis Atlidakis, and Vasileios P. Kemerlis. <i>EPF: Evil Packet Filter.</i> In 2023 USENIX Annual Technical Conference (USENIX ATC 23), pp. 735-751. 2023.</p>
