--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
   <img src="static/b.png" alt="The Guy" class="photo"/>
   <p style="color: #666666"><small>Art by <a href="https://twitter.com/CarBotAnimation">CarBot</a></small></p>
   <p>
-    My name is Di Jin (金迪). I am a postdoc researcher
-    at <a href="https://atlas.cs.brown.edu/">Atlas Group</a>, Brown
-    University, working with Nikos Vasilakis. My research interests
-    include system security, software hardening, and other security
-    and system related topics. I received my PhD from Brown
-    University, advised by Vasileios P. Kemerlis. I did my undergrad
-    in IIIS (Yao Class), Tsinghua University.
+    My name is Di Jin (金迪). I am a researcher at Huawei. I was a
+    postdoc researcher at <a href="https://atlas.cs.brown.edu/">Atlas
+    Group</a>, Brown University, mentored by Nikos Vasilakis. My
+    research interests include system security, software hardening,
+    and other security and system related topics. I received my PhD
+    from Brown University, advised
+    by <a href="https://cs.brown.edu/~vpk">Vasileios
+    P. Kemerlis</a>. I did my undergrad in IIIS (Yao Class), Tsinghua
+    University.
   </p>
   <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
 </section>
